log
Thu 04 May 2023 02:56:24 AM UTC: 
 tests:  0|5
total_score: 0/70
96bcda4
Thu 04 May 2023 03:41:45 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘Node’ has no member named ‘next’
   55 |     if ( n->next != NULL){
      |           ^~
sudoku.c:56:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       push_back( list, n);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
d2ff5e9
Thu 04 May 2023 03:44:26 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘Node’ has no member named ‘first’
   55 |     if ( n->first != NULL){
      |           ^~
sudoku.c:56:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       pushback( list, n);
      |       ^~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
1edbdea
Thu 04 May 2023 03:44:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘n’ is a pointer; did you mean to use ‘->’?
   55 |     if ( n.first != NULL){
      |           ^
      |           ->
sudoku.c:56:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       pushback( list, n);
      |       ^~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
e5a039f
Thu 04 May 2023 03:44:39 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘Node’ has no member named ‘first’
   55 |     if ( n->first != NULL){
      |           ^~
sudoku.c:56:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       pushback( list, n);
      |       ^~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
63fc928
Thu 04 May 2023 03:53:02 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:14: error: invalid initializer
   55 |     Node b = copy( n);
      |              ^~~~
sudoku.c:56:6: error: subscripted value is neither array nor pointer nor vector
   56 |     b[0][i] = i + 1;
      |      ^
sudoku.c:57:21: error: incompatible type for argument 2 of ‘pushBack’
   57 |     pushBack( list, b);
      |                     ^
      |                     |
      |                     Node
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘Node’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
Compilation failed
48b09e3
Thu 04 May 2023 03:53:23 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:9: error: subscripted value is neither array nor pointer nor vector
   56 |     b[0][i] = i + 1;
      |         ^
Compilation failed
d959595
Thu 04 May 2023 03:54:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
67d0221
Thu 04 May 2023 03:54:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9f7d88f
Thu 04 May 2023 03:54:57 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:56:21: error: iteration 7 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   56 |     b->sudo[0][2+i] = i + 1;
      |     ~~~~~~~~~~~~~~~~^~~~~~~
sudoku.c:54:3: note: within this loop
   54 |   for( int i = 0; i < 9 ; i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
d70f70f
Thu 04 May 2023 03:55:14 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:5: error: expected ‘,’ or ‘;’ before ‘b’
   57 |     b->sudo[0][j] = i + 1;
      |     ^
sudoku.c:56:9: error: unused variable ‘j’ [-Werror=unused-variable]
   56 |     int j = 2 + i
      |         ^
cc1: all warnings being treated as errors
Compilation failed
e1b18b1
Thu 04 May 2023 03:55:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:19: error: iteration 7 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |     b->sudo[0][j] = i + 1;
      |     ~~~~~~~~~~~~~~^~~~~~~
sudoku.c:54:3: note: within this loop
   54 |   for( int i = 0; i < 9 ; i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
32afb49
Thu 04 May 2023 03:55:57 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:58:19: error: iteration 7 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   58 |     b->sudo[0][j] = i + 1;
      |     ~~~~~~~~~~~~~~^~~~~~~
sudoku.c:55:3: note: within this loop
   55 |   for( int i = 0; i < 9 ; i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
fc6845c
Thu 04 May 2023 03:56:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:6: error: ‘b’ is a pointer; did you mean to use ‘->’?
   58 |     b.sudo[0][j] = i + 1;
      |      ^
      |      ->
sudoku.c:54:7: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
   54 |   int j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
d5df923
Thu 04 May 2023 03:56:19 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:58:19: error: iteration 7 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   58 |     b->sudo[0][j] = i + 1;
      |     ~~~~~~~~~~~~~~^~~~~~~
sudoku.c:55:3: note: within this loop
   55 |   for( int i = 0; i < 9 ; i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
6acc1f9
Thu 04 May 2023 03:57:33 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:14: error: expected ‘;’ before ‘b’
   59 |     h = i + 1
      |              ^
      |              ;
   60 |     b->sudo[0][j] = h;
      |     ~         
sudoku.c:55:7: error: variable ‘h’ set but not used [-Werror=unused-but-set-variable]
   55 |   int h;
      |       ^
sudoku.c:54:7: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
   54 |   int j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7cba1af
Thu 04 May 2023 03:57:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:60:19: error: iteration 7 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   60 |     b->sudo[0][j] = h;
      |     ~~~~~~~~~~~~~~^~~
sudoku.c:56:3: note: within this loop
   56 |   for( int i = 0; i < 9 ; i++){
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
5524e03
